# curseforge-rs

./: .gitignore  Cargo.toml  README.md  flake.nix
api_utils/: Cargo.toml
api_utils/src/: lib.rs
curseforge/: Cargo.toml
query_string/: Cargo.toml
query_string/derive/: Cargo.toml
query_string/derive/src/: lib.rs
query_string/src/: lib.rs
src/: lib.rs
src/cfwidget/: mod.rs
src/cfwidget/types/: mod.rs  project.rs
src/official/: client.rs  endpoints.rs  mod.rs  paginate.rs  request.rs
src/official/request/: mod.rs  pagination.rs  params.rs  response.rs
src/official/types/: categories.rs  core.rs  file.rs  files.rs  game.rs  games.rs  mod.rs  mods.rs  projects.rs
tests/: curseforge.rs  endpoints.rs  official.rs
