[package]
name = "curseforge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_repr = "0.1"
chrono = { version = "0.4", features = ["serde"] }
surf = "2.3"
query_string = { path = "query_string" }

[dev-dependencies]
serde_json = "1.0"
smol = "1.2"
serde_path_to_error = "0.1"
