[package]
name = "curseforge"
version = "0.2.0"
authors = ["Jacob Birkett <jacob@birkett.dev>"]
edition = "2021"
description = "A straightforward asynchronous wrapper around the CurseForge Core API. Public API is subject to change before 1.0.0."
repository = "https://github.com/EssentialMC/curseforge-rs"
license = "Apache-2.0"
keywords = ["api", "rest", "async", "minecraft", "modding"]
categories = ["api-bindings", "asynchronous", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_repr = "0.1"
serde_with = "1.12"
serde_json = "1.0"
#serde_path_to_error = "0.1"
strum = { version = "0.24", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
surf = "2.3"
async-trait = "0.1"
awaur = "0.1"

[dev-dependencies]
smol = "1.2"
